--- a/usuaris/templates/usuaris_singUp.html
+++ b/usuaris/templates/usuaris_singUp.html
@@ -38,8 +38,8 @@
                         </div>
                     </div>
                     <span>
-                        Not registred yet? 
-                        <a href="{% url 'login' %}">create your free account here</a>
+                        Already registered? 
+                        <a href="{% url 'login' %}">Log in</a>
                     </span>
                 </div>
             </div>
