--- a/issues/templates/issue_edit.html
+++ b/issues/templates/issue_edit.html
@@ -51,7 +51,7 @@
                             <div style="display: flex; justify-content: space-between;">
                                 
                                 {% for tag in issue.tags.all %}
-                                    <div style="background-color: {{tag.color}}; display: flex; justify-content: space-between; margin-right: 5px;">
+                                    <div class="tag" style="background-color: {{tag.color}}; display: flex; justify-content: space-between; margin-right: 5px;">
                                         <span  style="margin-top: auto; margin-bottom: auto; margin-right: 5px; margin-left: 5px;">{{tag.nom}}</span>
                                         <a href="{% url 'esborrar_tag_issue' id_issue=issue.id nom_tag=tag.nom %}">
                                             <i class="fa fa-times" aria-hidden="true"></i>
@@ -175,34 +175,35 @@
                             <ul>
                                 {%  for log in issue.logs.all %}
                                     <li>
-                                        <div style="display: flex; justify-content: space-between; margin-left: 5px; margin-right: 5px; margin-top: 5px;">
+                                        <div style="display: flex; justify-content: space-between; margin-left: 5px; margin-right: 5px; margin-top: 5px; border-bottom: 0.5px solid grey;">
                                         
-                                            <div style="display: flex; justify-content: space-between; ">
+                                            <div style="display: flex; justify-content: space-between; margin-top: 10px; margin-bottom: 20px;">
                                                 <img src="{{ log.usuari.avatar.url }}"
                                                     width="60px"
                                                     height="60px"
                                                 >
-
-                                                {% if log.tipus == "CREAR" %}
-                                                    <p style="margin-left: 5px;">ha creat l'</p>
-                                                {% elif log.tipus == "ADD_ATT" %}
-                                                    <p style="margin-left: 5px;">Ha afegit el fitxer {{log.valor_nou}} al</p>
-                                                {% elif log.tipus == "DEL_ATT" %}
-                                                    <p style="margin-left: 5px;">Ha esborrat el fitxer {{log.valor_antic}} al</p>
-                                                {% elif log.tipus == "ADD_TAG" %}
-                                                    <p style="margin-left: 5px;">Ha afegit el tag {{log.valor_nou}} al</p>
-                                                {% elif log.tipus == "DEL_TAG" %}
-                                                    <p style="margin-left: 5px;">Ha esborrat el tag {{log.valor_antic}} al</p>
-                                                {% else %}
-                                                    <p style="margin-left: 5px;">Ha canviat l'atribut {{log.tipus}}  de {{log.valor_previ}} a {{log.valor_nou}} del</p>
-                                                {%endif%}
-                                            </div>
-                                            <div>
-                                                <div style="display: flex; justify-content: space-between;">
-                                                    <a href="/usuaris/{{log.usuari.user.id}}" style="margin-right: 5px;" class="comment-creator">{{ log.usuari.user.first_name }}</a>
-                                                    <span>{{ log.data }}</span>
+                                                <div style="margin-left: 10px">
+                                                    <div style="display: flex; margin-left: 5px;">
+                                                        <a href="/usuaris/{{log.usuari.user.id}}" style="margin-right: 5px;" class="comment-creator">{{ log.usuari.user.first_name }}</a>
+                                                        <span>{{ log.data }}</span>
+                                                    </div>
+                                                
+                                                    {% if log.tipus == "CREAR" %}
+                                                        <p style="margin-left: 5px;">ha creat l'</p>
+                                                    {% elif log.tipus == "ADD_ATT" %}
+                                                        <p style="margin-left: 5px;">Ha afegit el fitxer {{log.valor_nou}} al</p>
+                                                    {% elif log.tipus == "DEL_ATT" %}
+                                                        <p style="margin-left: 5px;">Ha esborrat el fitxer {{log.valor_antic}} al</p>
+                                                    {% elif log.tipus == "ADD_TAG" %}
+                                                        <p style="margin-left: 5px;">Ha afegit el tag {{log.valor_nou}} al</p>
+                                                    {% elif log.tipus == "DEL_TAG" %}
+                                                        <p style="margin-left: 5px;">Ha esborrat el tag {{log.valor_antic}} al</p>
+                                                    {% else %}
+                                                        <p style="margin-left: 5px;">Ha canviat l'atribut {{log.tipus}}  de {{log.valor_previ}} a {{log.valor_nou}} del</p>
+                                                    {%endif%}
                                                 </div>
                                             </div>
+                                            
                                         </div>
                                     </li>
                                 {% endfor %}
@@ -212,27 +213,29 @@
                 {%else%}    
                     <section class="comment" >
                         <div style="display: flex; justify-content: space-between;">
-                            <input type="text" name="text" style="margin-top: 5px; margin-bottom: 5px;">
+                            <textarea name="text" placeholder="Type a new comment here" style="margin-top: 5px; margin-bottom: 5px;"></textarea>
                             <button type="submit" name="afegir_comentari" style="background: none;">
                                 <i class="fa fa-floppy-o" aria-hidden="true"></i>
                             </button>
                         </div>
 
-                        <div class="commmetns-wrapper">
+                        <div >
                             <ul>
                                 {%  for comentari in issue.comentaris.all %}
                                     <li>
-                                        <div style="display: flex; justify-content: space-between; margin-left: 5px; margin-right: 5px; margin-top: 5px;">
-                                            <img src="{{ comentari.autor.avatar.url }}"
-                                                width="60px"
-                                                height="60px"
-                                            >
-                                            <div>
-                                                <div style="display: flex; justify-content: space-between;">
-                                                    <a href="/usuaris/{{comentari.autor.user.id}}" style="margin-right: 5px;" class="comment-creator">{{ comentari.autor.user.first_name }}</a>
-                                                    <span>{{ comentari.data }}</span>
+                                        <div style="border-bottom: 0.5px solid grey;">
+                                            <div style="display: flex; margin-left: 5px; margin-right: 5px; margin-top: 10px; margin-bottom: 20px;">
+                                                <img src="{{ comentari.autor.avatar.url }}"
+                                                    width="60px"
+                                                    height="60px"
+                                                >
+                                                <div style="margin-left: 10px;">
+                                                    <div style="display: flex; justify-content: space-between;">
+                                                        <a href="/usuaris/{{comentari.autor.user.id}}" style="margin-right: 5px;" class="comment-creator">{{ comentari.autor.user.first_name }}</a>
+                                                        <span>{{ comentari.data }}</span>
+                                                    </div>
+                                                    <span>{{ comentari.text }}</span>
                                                 </div>
-                                                <span>{{ comentari.text }}</span>
                                             </div>
                                         </div>
                                     </li>
@@ -540,6 +543,7 @@
     });
     inputAddTag.addEventListener('keypress', function(e){
         if (e.key === 'Enter') {
+            event.preventDefault();
             saveTag.click();
         }
     })
