--- a/issues/templates/issue_list.html
+++ b/issues/templates/issue_list.html
@@ -90,7 +90,7 @@
                                                 
                                             </div>
                                             {%elif "&tipus="|add:key in request.get_full_path%}
-                                            <p>aaaaaaa</p>
+                                            
                                             {%with "&tipus="|add:key as patata%}
                                             <p>{{patata}}</p>
                                             {%with request.get_full_path|cut:patata as link%}
@@ -302,6 +302,8 @@
                                         <div class="filter-list" style="display:none" name="tanca"id="filtre_gravetat">
                                             <div>
                                                 {%for key,value in TGravetat%}
+                                                {%if request.GET.gravetat == 'none' and key not in request.GET.gravetat%}
+                                                <p>{{request.GET.gravetat}}</p>
                                                     {%if key == 'D'%}
                                                         <button class="single-filter single-filter-type-general"style="border-color: rgb(112, 114, 143); width:100%">
                                                     {%elif key == 'M'%}
@@ -316,6 +318,7 @@
                                                     
                                                     <div onclick="filtre_llista('gravetat=','{{key}}')" class="name">{{value}}</div>
                                                     </button>
+                                                    {%endif%}
                                                 {%endfor%}  
                                             </div>
                                         </div>
@@ -340,15 +343,17 @@
                                         <div class="filter-list" style="display:none" name="tanca"id="filtre_prioritat">
                                             <div>
                                                 {%for key,value in TPrioritat%}
-                                                    {%if key == 'B'%}
+                                                {%if key  not in request.GET.prioritat%}
+                                                {%if key == 'B'%}
                                                         <button class="single-filter single-filter-type-general"style="border-color: rgb(168, 228, 64); width:100%">
-                                                    {%elif key == 'M'%}
+                                                {%elif key == 'M'%}
                                                         <button class="single-filter single-filter-type-general" style="border-color: rgb(228, 206, 64);">
-                                                    {%else%} 
+                                                {%else%} 
                                                         <button class="single-filter single-filter-type-general" style="border-color: rgb(228, 124, 64);">
-                                                    {%endif%} 
+                                                {%endif%} 
                                                     <div onclick="filtre_llista('prioritat=','{{key}}')" class="name">{{value}}</div>
                                                     </button>
+                                                {%endif%}
                                                 {%endfor%}
                                             </div>
                                         </div>
@@ -739,7 +744,7 @@
                                 <form method="post">
                                     {% csrf_token %}
                                     <input type="hidden" name="id_issue" value="{{issue.id}}">
-                                <select id="selectStatus" name="estat" type="submit" class="status-button" style="margin-top: 5px; border:none; outline:none;background: none;">
+                                <select id="selectStatus{{issue.id}}" onchange="document.getElementById('btnSaveState{{issue.id}}').click()" name="estat" type="submit" class="status-button" style="margin-top: 5px; border:none; outline:none;background: none;">
                                     {% for key,value in TEstats %}
                                         {% if issue.estat == key %}
                                             <option selected="selected" value="{{key}}">{{value}}</option>
@@ -748,7 +753,7 @@
                                         {%endif%}
                                     {% endfor %}
                                 </select>
-                                <button id="btnSaveState" type="submit"  name="guardar_estat" style="display: none;"></button>
+                                <button id="btnSaveState{{issue.id}}" type="submit"  name="guardar_estat" style="display: none;"></button>
                                 </form>
                                 </td>
                                 
@@ -763,16 +768,17 @@
                                 <form method="post">
                                     {% csrf_token %}
                                     <input type="hidden" name="id_issue" value="{{issue.id}}">
-                                    <select id="selectAssig" name="assignat" type="submit" class="assigned-button" style="margin-top: 5px; border:none; outline:none;background: none;">
+                                    <select id="selectAssig{{issue.id}}" onchange="document.getElementById('btnSaveAssig{{issue.id}}').click() "name="assignat" type="submit" class="assigned-button" style="margin-top: 5px; border:none; outline:none;background: none;">
+                                        <option value="0">no avatar</option>
                                         {% for usuari in usuaris %}
                                             
                                                 <option value="{{usuari.user.id}}">{{usuari.user.username}}</option>
                                             
                                         {% endfor %}
                                     </select>
-                                    <button id="btnSaveAssig" type="submit"  name="guardar_assignat" style="display: none;"></button>
+                                    <button id="btnSaveAssig{{issue.id}}" type="submit"  name="guardar_assignat" style="display: none;"></button>
                                     </form>
-                                    <span class="issue-assignedto">{{issue.assignacio.user.avatar.url}}</span>
+                                    <img class="issue-assignedto">{{issue.assignacio.user.avatar.url}}</img>
                                 </td>
                                 
                                 
@@ -800,11 +806,7 @@
    }
     
     
-    const selectStatus = document.querySelector('#selectStatus');
-    var btnSaveStat = document.getElementById('btnSaveState');
-    selectStatus.addEventListener('change', function() {
-        btnSaveStat.click();
-    });
+    
     
     function filtre(val1,val2){
         
